Updating our details.1.0

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a support analyst, aviation machinist mate for the US Navy.</p>
+      <p>I am a support analyst and an aviation machinist mate for the US Navy.</p>
       <h1>Where I'm From</h1>
       <p>I was born in Venezuela but raise here in Texas...</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Photography, Art, Traveling, any sport outside, and eating.</p>
       <h1>What's your dream job?</h1>
-      <p>I don't have a dream job, I however would like to work for myself.</p>
+      <p>To work for myself.</p>
       <h1>Where do you live?</h1>
-      <p>Currently I am living in McKinney, TX</p>
+      <p>Currently I am living in McKinney, TX.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I really enjoy coding and websites, I would like to work on my own building websites.</p>
+      <p>Because I really enjoy coding, websites, and I would like to work on my own building websites.</p>
     </section>
 
     <footer id="footer">
